# IsabelleGym

./: .dockerignore  .gitignore  .scalafmt.conf  DESIGN_CHOICES.md  Dockerfile  ISSUES.md  LICENSE  README.md  devnote.md  docker-compose.yml  install.sh  install_macos.sh  mcp_bench_results.json  mcp_bench_results_algebra_276.json  mcp_bench_results_n_764_withcaching.json  mcp_bench_results_numbertheory_764.json  pyproject.toml  report drafts  requirement.txt
.metals/: metals.mv.db
MCP-comparison/: README.md  analyze.py  config.local.yaml  config.yaml  run_autocorrode_iq.py  run_isabelle_mcp.py  run_isabellegym.py
benchmark/: afp_isabelle.py  afp_isabelle_gym.py  afp_samples.py  session_pool_vs_regular_gym.py
client/: __init__.py  async_client.py
demo/: demo.ipynb  draft.md
evaluation/: #Untitled-1#  Server_Concurrency.thy  autocorrode_ir_setup.md  clean_example_dir.py  eval_bigstep_isabelle_build.py  eval_bigstep_isabelle_build_old.py  eval_bigstep_server.py  eval_bigstep_server_client_ver.py  eval_smallstep_autocorrode_ir.py  eval_smallstep_isabellegym.py  eval_smallstep_isabellegym_diagnose.py  eval_smallstep_qisabelle.py  eval_smallstep_server.py  eval_smallstep_server_client_1_worker_no_reuse.py  eval_smallstep_server_client_8_worker_with_reuse.py  eval_smallstep_server_client_8_worker_with_reuse_no_theory_header.py  eval_smallstep_server_client_with_reuse.py  eval_stats.py  evaluation_setup.md  process.py  runs_analysis.ipynb  server_benchmark.py  theory_splitter.py
gym/: isabelle_agent_interface.py  isabelle_gym.py  mcts_agent.py  session_pool.py  (+4 more)
(+278 files in other folders)
