[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isabelle-gym"
version = "0.1.0"
dependencies = [
    "py4j",
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pylint",
    "isort",
    "black",
    "mypy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["client*", "gym*", "repl*", "server_gym*"]

[tool.pylint.main]
ignore-paths = [
    ".*venv",
]
disable = [
    # super-linter cannot install dependencies
    "import-error",
    # Code lines already checked by black and length of strings doesn't need to be capped
    # (will interfere with expect tests)
    "line-too-long",
]

[tool.mypy]
disable_error_code = [
    "import-untyped",
]
strict = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.coverage.run]
source = ["repl", "gym"]

[tool.pytest.ini_options]
addopts = "--cov --cov=gym --cov-report=term --cov-report=lcov:cover/lcov.info"
